# react-native-rasa

./: .eslintignore  .eslintrc.js  App.js  App.tsx  LICENSE  README.md  RNRasa.js  RNRasa.tsx  app.json  babel.config.js  metro.config.js  package.json  react-native-rasa.podspec  styles.js  styles.ts  tsconfig.json  types.ts  util.js  utils.ts
android/: settings.gradle
android/app/: _BUCK  build.gradle
android/app/src/debug/java/com/rnrasaui/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/rnrasaui/: MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml
example-rasa/: .gitignore  config.yml  domain.yml  pyproject.toml  story_graph.dot
example-rasa/actions/: actions.py
example-rasa/actions/schemas/: checkbox.json
example-rasa/data/: nlu.yml  rules.yml  stories.yml
ios/: Podfile
ios/rnrasaui/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
ios/rnrasaui.xcodeproj/: project.pbxproj
ios/rnrasaui.xcodeproj/xcshareddata/xcschemes/: rnrasaui-tvOS.xcscheme  rnrasaui.xcscheme
ios/rnrasaui.xcworkspace/: contents.xcworkspacedata
ios/rnrasauiTests/: rnrasauiTests.m
patches/: react-native-lightbox+0.8.1.patch  react-native-video+5.2.0.patch
