[tool.poetry]
name = "example-rasa"
version = "0.1.0"
description = "Rasa example for react-native-rasa package"
authors = ["jonra1993 <jon_ra@hotmail.es>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
rasa = {extras = ["full"], version = "^3.0.4"}
autopep8 = "^1.6.0"
pytz = "^2021.3"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
